--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,26 @@ button {
   border: none;
 }
 .film-section {
-  background: url(<path-to-image>), lightgray 50% / cover no-repeat;
-  background-image: url(../images/main/А\ 1.png);
+  background-image: url("../images/main/main-picture.png");
+  background-color: #1e2538;
+  background-repeat: no-repeat;
+  background-size: cover;
+  /* background-position: left 0, right 0, top 0;2 */
+}
+.section-btn {
+  margin-top: 20px;
+  text-align: center;
+}
+.btn-section {
+  border-radius: 10px;
+  border: 2px solid #fff;
+  padding: 21px 46px 20px 47px;
+  color: #fff;
+  background-color: transparent;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 166.5%;
+}
+.btn-section:hover {
 }
