--- a/css/header.css
+++ b/css/header.css
@@ -59,6 +59,9 @@
   color: #3657cb;
   background: #fff;
 }
+.box-1 img {
+  border-radius: 10px;
+}
 .logo-sites svg {
   transition: 0.3s;
   fill: #686868;
