--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,7 @@
 /*   ///   move boxes   //// */
+main {
+  background: #1e2538;
+}
 
 .pobeg {
   color: #fff;
@@ -43,4 +46,30 @@
   position: absolute;
   top: 10px;
   right: 10px;
+}
+/*    trailer-section /// */
+.noviy {
+  color: #fff;
+  font-size: 65px;
+  font-weight: 900;
+}
+.trailer-title {
+  display: flex;
+  padding-top: 60px;
+  align-items: center;
+  justify-content: space-between;
+}
+.trailer-right-par {
+  color: #fff;
+  font-size: 22px;
+  font-weight: 700;
+}
+.trailer-right {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+#movie-trailer {
+  margin-top: 20px;
+  width: 1430px;
 }
